# games

./: README.md  games.cabal  langton  langton-array  snake
src/Automata/Langton/: Array.hs
src/Games/: Cribbage.hs
src/Langton/: langton.hs
src/Snake/: snake.hs
