
name:                games
version:             0.1.0.0
synopsis:            Some small games, most using gloss
description:         A collection of little bits of gloss.
                     Includes some games, some cellular automata.
license:             BSD3
license-file:        LICENSE
author:              Kyle Carter
maintainer:          kylcarte@gmail.com
copyright:           Kyle Carter 2013
category:            Game
build-type:          Simple
cabal-version:       >=1.16

executable langton
  main-is:             src/Automata/Langton.hs
  build-depends:       base       >= 4    && < 5,
                       gloss      >= 1.7  && < 1.8,
                       containers >= 0.5  && < 0.6,
                       vector     >= 0.10 && < 0.11
  ghc-options:         -Wall
  default-language:    Haskell2010

executable langton-array
  main-is:             src/Automata/Langton/Array.hs
  build-depends:       base       >= 4    && < 5,
                       gloss      >= 1.7  && < 1.8,
                       containers >= 0.5  && < 0.6,
                       array      >= 0.4  && < 0.5
  ghc-options:         -Wall
  default-language:    Haskell2010

executable snake
  main-is:             src/Games/Snake.hs
  build-depends:       base       >= 4    && < 5,
                       gloss      >= 1.7  && < 1.8,
                       random     >= 1.0  && < 1.1
  ghc-options:         -Wall
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Games.Cribbage
  build-depends:       base       >= 4    && < 5,
                       containers >= 0.5  && < 0.6
  ghc-options:         -Wall
  default-language:    Haskell2010

